--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 <TR>
 <TD> Contenido audiovisual </TD>
 <TD><A HREF= https://www.youtube.com/ TARGET="BLANK"> </A>
-<TD>YouTube es una página para ver, subir y compartir videos. </TD>
+<TD>YouTube es una página para ver, subir y compartir videos. </T
 </TR>
 <TR>
-<TD> Música </TH>
+<TD> Música </TD>
 <TD><A HREF="https://open.spotify.com/intl-es"> SPOTIFY </A>
 <TD> Spotify es una aplicación para escuchar música y pódcasts en línea.</TD>
-<TD> Noticias </TH>
+<TD> Noticias </TD>
 <TD><A HREF="https://www.lasillavacia.com"> La Silla Vacía </A>
 <TD> Es un periodico colombiano independiente.</TD>
 </TR>
